[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
lazy_static = "1.4.0"
rayon = "1.8.0"
regex = "1.10.2"
itertools = "0.12.0"
memory-stats = "1.2.0"
macroquad = "0.4.13"
dashmap = "6.1.0"

[lib]
name = "aoc"
path = "src/lib.rs"
